  code is based on the ircu Windows NT port by run.
- Fixed a problem with /quote dns i
- Rewrote a whole bunch of stuff in the extcmode code
- Extended the module system to allow better error reporting using ModuleGetError and
  ModuleGetErrorStr
- Changed channel mode +f, it's a much more advanced antiflood mode now.
  It can protect against joinfloods, ctcpfloods, nickfloods and message/notice floods.
  For example +f [10j]:15 allows 10 joins per 15 seconds, if the limit is reached the
  channel is set automatically +i (invite only) by the server.
  You can read more about it in section 3.12 'Anti-Flood features' of unreal32docs.html:
  http://www.vulnscan.org/UnrealIrcd/unreal32docs.html#feature_antiflood
  This change can cause desynch problems if both old+f and new+f servers are used on
  a network. It's (currrently!) possible to use the old +f system if you undef NEWCHFLOODPROT
  in include/config.h.
- Fixed ~5 compiler warnings at *NIX and ~20 at windows. Some of them _could_ have caused problems.
- Moved EOS debugging code to DEBUGMODE.
- Fixed a channel sync bug reported by thilo&Rocko (#0001218).
- Fixed minor config parser memleak reported by AngryWolf (#0001214).
- Fixed bug regarding hidden opers + m_whois cleanup (#0001208).
- Made SSL users unable to -z themselves, also added 2 flags to /stats S,
  reported by Joolz (#0001200).
- Fixed problem with opers having both 'admin' and 'coadmin' causing double-notices (#0001043).
- +f now also allows you to specify an 'action'. For example +f [30j#R]:15 will set the
  channel +R (instead of +i) if more than 30 joins in 15 seconds are reached.
  The following combinations are allowed: c#m, c#M, j#R and m#M. (docs will be updated later)
- Probably fixed a bug regarding 'setting mode' notice with +f (was sometimes sent to non-chanops).
- Fixed multiple chmode +u bugs: remote join, netjoin, +mu relay between servers, kick and
  a part bug. Most of them reported by Lx (#0001097).